syntax="proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
option go_package="cognologix.com/human/personpb";
option optimize_for=SPEED;

package human;
message PhoneNumber {
    string number = 1;
    enum PhoneType {
        MOBILE=0;
        HOME=1;
        WORK=2;
    }
    PhoneType ph_type=2;
}

message Permanent {
    string line = 1;
}

message Communication {
    string line = 1;
}


message Person {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    int32 age = 4;   
    repeated PhoneNumber phones=5;
    google.protobuf.Timestamp last_updated = 6;
    repeated google.protobuf.Any extra = 7;   
    oneof address_type {
        Permanent permanent = 8;
        Communication communication = 9;
    }
    map<string, Person> family = 10;
}

message GetPersonRequest {
    int64 id=1;
}

message GetPersonResponse {
    Person person=1;
}

message PutPersonRequest {
    repeated Person person=1;
}

message PutPersonResponse {
    bool result=1;
    repeated int64 id=2;
}

service PersonService {
    rpc GetPerson(GetPersonRequest) returns (GetPersonResponse){}
    rpc PutPerson(PutPersonRequest) returns (PutPersonResponse){}
    rpc PutPeople(stream PutPersonRequest) returns (PutPersonResponse){}
    rpc GetAllPeople(GetPersonRequest) returns (stream GetPersonResponse){}
}